Fixing Trig.code so that it does not cause a [deprecation] warning when compiled